--- a/ConsoleIDE/ConsoleIDE.csproj
+++ b/ConsoleIDE/ConsoleIDE.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="dotnet-curses" Version="1.0.3" />
+  </ItemGroup>
+
 </Project>
