--- a/ConsoleIDE/ConsoleIDE.csproj
+++ b/ConsoleIDE/ConsoleIDE.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="dotnet-curses" Version="1.0.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.11.0" />
   </ItemGroup>
 
 </Project>
